[package]
name = "rhainterop"
version = "0.1.0"
edition = "2021"
authors = ["emik"]

[dependencies]
decimal = "2.1.0"
memflow = { version = "0.2.3", features = ["plugins"] }
rhai = { version = "1.19.0", features = ["bin-features", "core-error", "debugging", "decimal", "hashbrown", "internals", "libm", "metadata", "rustyline", "serde", "serde_json"] }
rhai-autodocs = "0.7.0"
rhai_codegen = { version = "2.2.0", features = ["metadata"] }
#rhai-dylib = "0.4.0"
rhai-fs = { version = "0.1.3", features = ["metadata"] }
rhai-url = "0.0.5"
#rhai-memflow = "0.1.2"
rhai-rand = { version = "0.1.6", features = ["array", "float", "decimal", "metadata", "rust_decimal"] }
rhai-sci = { version = "0.2.1", features = ["csv-sniffer", "io", "metadata", "minreq", "polars", "temp-file", "url"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.214", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
